--- a/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
@@ -11,6 +11,7 @@
   background-color:#ecf2fe ;
   width: 100%;
   height: 100%;
+  min-height: 1000px;
   padding-left: 251px;
   padding-top: 75px;
   display: flex;
