--- a/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
@@ -10,37 +10,45 @@
 .site_con{
   background-color:#ecf2fe ;
   width: 100%;
-  height: 100%;
-  min-height: 1000px;
+  height: 100% ;
   padding-left: 251px;
   padding-top: 75px;
   display: flex;
   
+  .scrollable-container {
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
+    
+    &::-webkit-scrollbar-track {
+      background: #f1f1f1;
+      border-radius: 10px;
+    }
+    
+    &::-webkit-scrollbar-thumb {
+      background: #c1c1c1;
+      border-radius: 10px;
+    }
+    
+    &::-webkit-scrollbar-thumb:hover {
+      background: #a8a8a8;
+    }
 
-   .scrollable-container {
-        height: 100%;
-        overflow-y: auto;
-        overflow-x: hidden;
-        
-        &::-webkit-scrollbar {
-          width: 6px;
-        }
-        
-        &::-webkit-scrollbar-track {
-          background: #f1f1f1;
-          border-radius: 10px;
-        }
-        
-        &::-webkit-scrollbar-thumb {
-          background: #c1c1c1;
-          border-radius: 10px;
-        }
-        
-        &::-webkit-scrollbar-thumb:hover {
-          background: #a8a8a8;
-        }
+    .con_site{
+      width: calc(100% - 48px);
+      height: 100%;
+      background-color: green;
 
-  .o{
+    }
+      
+
+
+
+ /* .o{
     display: flex;
     .conatainer{
       width: 1191.750px;
@@ -765,5 +773,5 @@
   background-color: #fff;
   margin-left: 24px;
   margin-right: 24px;
-}
-}
+}*/
+}}
