--- a/Dashboard/React_project/React_pr/sandbox-main/src/components/com_main/4card/main1.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/components/com_main/4card/main1.scss
@@ -2,11 +2,9 @@
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/mixins";
 @import "bootstrap/scss/buttons";
-@import "bootstrap/scss/transitions";
-@import '@fontsource/urbanist/400.css'; 
-@import '@fontsource/urbanist/500.css'; 
-@import '@fontsource/urbanist/600.css'; 
+@import "bootstrap/scss/transitions";  
 @import '@fontsource/urbanist/700.css';
+@import '@fontsource/roboto/400.css';
 
 $color_main1:#0f141f;
 $color_main2: #0c1018;
@@ -17,25 +15,34 @@ $color_main2: #0c1018;
     font-weight: 700;
     font-family: 'Urbanist', sans-serif;
     margin-bottom: 2px !important;
-
+    width: 100%;
+    height: auto;
 }
+
 @mixin card-text{
     color: #0c1018;
     font-size: 15px;
     font-weight: 400;
     font-family: 'Roboto', sans-serif;
 }
+
 .card-four{
+    width: 100%;
+    height: 100%;
+    padding-right: 24px;
 
     .card_group{
         width: 100%;
         height: 158.500px;
         display: flex;
         gap: 20px;
+        background-color: rgb(66, 0, 128);
         
         .card{
             border-radius: 16px;
             border: none;
+            flex: 1; // Равномерное распределение ширины
+            box-sizing: border-box;
 
             .card-body{
                 padding: 20px;
@@ -49,18 +56,23 @@ $color_main2: #0c1018;
                 }
 
                 .icon_card_graphic{
-                    margin-top: 16px;
-                    width: auto;
-                    height: auto;
-                    display: flex;
-
+                    margin-top: 9px !important;
+                    
                     .icon_img{
                         width: 48px;
                         height: 48px;
-                        justify-content: center;
                         border-radius: 100px;
                         display: flex;
                         align-items: center;
+                        justify-content: center;
+                        
+                        img {
+                            width: 24px; 
+                            height: 24px;
+                        }
+                    }
+                    .graph_card{
+                        margin-bottom: 2px;
                     }
                 }
             }
