--- a/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
@@ -14,9 +14,11 @@
   padding-left: 251px;
   padding-top: 75px;
   display: flex;
+  box-sizing: border-box;
   
   .scrollable-container {
     height: 100%;
+    width: 100%;
     overflow-y: auto;
     overflow-x: hidden;
     
@@ -39,9 +41,17 @@
     }
 
     .con_site{
-      width: calc(100% - 48px);
+      width: 100%;
       height: 100%;
       background-color: green;
+      padding: 24px;
+
+      .container1,
+      .container2{
+        width: 100% !important;
+        height: 100%;
+  
+      }
 
     }
       
