--- a/Dashboard/React_project/React_pr/sandbox-main/src/components/com_main/big_graph/main12.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/components/com_main/big_graph/main12.scss
@@ -8,76 +8,55 @@
 @import '@fontsource/urbanist/600.css'; 
 @import '@fontsource/urbanist/700.css'; 
 
+$color_main:#0f141f;
+$color_main1:#667797;
+$color_main2:#d5dbe7;
+
+
+@mixin text_h3{
+    color: $color_main;
+    font-size: 22px !important;
+    font-weight: 700;
+    font-family: 'Urbanist', sans-serif;
+}
+@mixin select-dropdown{
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    color: $color_main1;
+    font-size: 13px;
+    border: 1px solid $color_main2;
+}
+  
 .graph{
     width: 100%;
     height: 100%;
 
-    .card-body{
-      .h1_text_buttons{
-        background-color: coral;
-        
-        
-        h1{
-          color: #0f141f;
-          font-size: 22px;
-          font-weight: 700;
-          font-family: 'Urbanist', sans-serif;
-          margin-top: 5px;
-          
-        }
-        
-            .circle_text{
-              display: flex;
-              gap:5px;
-              flex-direction: row;
-              margin-right: 12px;
-              color: #0c1018;
-              font-family: 'Roboto', sans-serif;
-              font-size: 13px;
-              font-family: 400;
-              margin-top: 10px;
-              
-              .circle{
-                width: 8px;
-                height: 8px;
-                border-radius: 100px;
-                margin-top: 5px;
-                margin-left: 5px;
-              }
+    .card{
+        .card-body{
+            h4{
+                @include text_h3();
+                margin-top: 1px;
             }
-            .e{
-              width: 81px;
-              height: 31px;
-              margin-top: 5px;
-              border: 1px solid #d5dbe7;
-              color: #667797;
-              font-size: 13px;
-              border-radius: 8px;
-              margin-right: 5px;
-            }
-            
-            .dropdown{
-              width: 81px;
-              height: 31px;
-              
-              button{
-                width: 81px;
-                height: 31px;
-                margin-top: 7px;
-                border: 1px solid #667797;
-                
-                
-                p{
-                  font-size: 13px;
-                  font-weight: 400;
-                  font-family: 'Roboto', sans-serif;
-                  margin-right: 30px;
+            .select-dropdown{
+                font-family: "Roboto", sans-serif;
+                font-weight: 400;
+                color: #667797;
+                font-size: 13px;
+                border: 1px solid #d5dbe7;
+                padding: 4px 8px ;
+                cursor: pointer;
+    
+                &:focus{
+                border: 1px solid #6290ee;
+                box-shadow: none;
                 }
-              }
             }
-          }
-          
-}
         }
+    }   
+}
+
+   
+
+        
 
     
