--- a/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
@@ -7,52 +7,66 @@
 @import '@fontsource/urbanist/500.css'; 
 @import '@fontsource/urbanist/600.css'; 
 @import '@fontsource/urbanist/700.css'; 
-.site_con{
-  background-color:#ecf2fe ;
-  width: 100%;
-  height: 100% ;
-  padding-left: 251px;
-  padding-top: 75px;
-  display: flex;
-  box-sizing: border-box;
-  
-  .scrollable-container {
-    height: 100%;
+.site_con {
+    background-color: #ecf2fe;
     width: 100%;
-    overflow-y: auto;
-    overflow-x: hidden;
+    height: 100%;
+    padding-left: 251px;
+    padding-top: 75px;
+    display: flex;
+    box-sizing: border-box;
     
-    &::-webkit-scrollbar {
-      width: 6px;
-    }
-    
-    &::-webkit-scrollbar-track {
-      background: #f1f1f1;
-      border-radius: 10px;
-    }
-    
-    &::-webkit-scrollbar-thumb {
-      background: #c1c1c1;
-      border-radius: 10px;
-    }
-    
-    &::-webkit-scrollbar-thumb:hover {
-      background: #a8a8a8;
-    }
-
-    .con_site{
-      width: 100%;
-      height: 100%;
-      background-color: green;
-      padding: 24px;
-
-      .container1{
-        width: 100% !important;
+    .scrollable-container {
         height: 100%;
-  
-      }
+        width: 100%;
+        overflow-y: auto;
+        overflow-x: hidden;
+        
+        &::-webkit-scrollbar {
+            width: 6px;
+        }
+        
+        &::-webkit-scrollbar-track {
+            background: #f1f1f1;
+            border-radius: 10px;
+        }
+        
+        &::-webkit-scrollbar-thumb {
+            background: #c1c1c1;
+            border-radius: 10px;
+        }
+        
+        &::-webkit-scrollbar-thumb:hover {
+            background: #a8a8a8;
+        }
 
+        .container-fluid {
+          padding: 24px;
+            
+            .row {
+                width: 100%;
+              
+               
+                .main-content {
+                    width: 100%;
+                    padding-right: 0px;
+                }
+                
+                .sidebar-content {
+                    padding-left: 10px;
+                
+                    .card {
+                        border-radius: 18px;
+                        border: none;
+                      
+                        background: #fff;
+                        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+                    }
+                }
+            }
+        }
     }
+}
       
 
 
@@ -783,4 +797,3 @@
   margin-left: 24px;
   margin-right: 24px;
 }*/
-}}
