--- a/Dashboard/React_project/React_pr/sandbox-main/src/components/com_main2/button_option/main21.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/components/com_main2/button_option/main21.scss
@@ -3,6 +3,8 @@
        border-radius: 18px;
        border:none;
        margin-top: 24px;
+        box-shadow: none !important;
+
       
        
        .card-body{
