--- a/Dashboard/React_project/React_pr/sandbox-main/src/components/com_main2/button_option/main21.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/components/com_main2/button_option/main21.scss
@@ -12,7 +12,7 @@
          height: auto;
          margin-top: 20px;
          margin-bottom: 20px;
-         padding: 0;
+         padding: 0 !important;
          flex-direction: column;
          
          .k{
