--- a/Dashboard/React_project/React_pr/sandbox-main/src/components/footer/footer.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/components/footer/footer.scss
@@ -11,9 +11,25 @@
     padding-top: 18px !important
         
     }
+
+    .link{
+      button{
+        border:none;
+        background: none;
+        color: #667797;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 400;
+        font-size: 13px;
+
+        &:hover{
+          color: #3e80f9;
+          text-decoration: underline;
+        }
+      }
+    }
+  }
     
   }
  
 
   
-}
