--- a/Dashboard/React_project/React_pr/sandbox-main/src/components/header/Header.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/components/header/Header.scss
@@ -4,6 +4,9 @@
 @import "bootstrap/scss/buttons";
 @import "bootstrap/scss/transitions";
 @import '@fontsource/roboto/400.css';
+@import '@fontsource/roboto/500.css';
+@import '@fontsource/roboto/600.css';
+@import '@fontsource/roboto/700.css';
 
 $color_main1:#ffffff;
 $color_main2:#d5dbe7;
