--- a/Dashboard/React_project/React_pr/sandbox-main/src/components/footer/footer.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/components/footer/footer.scss
@@ -1,35 +1,36 @@
 .down-board{
-  height: auto !important;
-  width: 100%;
-  padding-left: 24px;
-  padding-right: 24px;
-
-  .card{
-    border-radius: 16px 16px 0px 0px;
-    border:none;
+    border-radius: 18px 18px 0 0;
+    border: none !important;
+    width: 100%;
+    background: #fff;
+    margin-bottom: 0;
+    
     .card-body{
-    padding-top: 18px !important
-        
-    }
-
-    .link{
-      button{
-        border:none;
-        background: none;
+      padding: 18px 20px;
+      
+      p{
         color: #667797;
+        font-size: 13px;
         font-family: 'Roboto', sans-serif;
         font-weight: 400;
-        font-size: 13px;
+        margin: 0;
+      }
+      
+      .link{
+        button{
+          border: none;
+          background: none;
+          color: #667797;
+          font-family: 'Roboto', sans-serif;
+          font-weight: 400;
+          font-size: 13px;
+          margin-left: 15px;
 
-        &:hover{
-          color: #3e80f9;
-          text-decoration: underline;
+          &:hover{
+            color: #3e80f9;
+            text-decoration: underline;
+          }
         }
       }
     }
-  }
-    
-  }
- 
-
-  
+}
